--- a/DailyJournal/app/build.gradle
+++ b/DailyJournal/app/build.gradle
@@ -36,5 +36,6 @@ dependencies {
     compile 'com.google.firebase:firebase-database:9.4.0'
     compile 'com.firebaseui:firebase-ui-database:0.4.0'
     compile 'com.github.provigen:ProviGen-lib:2.0.+'
+    compile 'com.android.support:design:24.1.1'
 }
 apply plugin: 'com.google.gms.google-services'
