All functions implemented :D

--- a/DailyJournal/app/src/main/AndroidManifest.xml
+++ b/DailyJournal/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
 
         <activity android:name=".ViewFriendsActivity" />
         <activity android:name=".PendingFriendActivity" />
-        <activity android:name=".SearchFriendsActivity"></activity>
+        <activity android:name=".SearchFriendsActivity" />
+        <activity android:name=".ViewFriendPosts"></activity>
     </application>
 
 </manifest>
